@@ -62,7 +62,8 @@
 - Fix: [#17905] The chain button in the map window is enabled for rectangular maps when (re)opened.
 - Fix: [#17931] The in-game command ‘count_objects’ crashes the game.
 - Fix: [#17865] With difficult guest generation, tested but unopened rides still contribute to the guest cap.
-- Fix: [#17866] [Plugin] Wrong Soft Guest Cap at start of new game
+- Fix: [#17866] [Plugin] Wrong Soft Guest Cap at start of new game.
+- Fix: [#17980] Queue lines of track designs mess up existing queue lines if dragged through them.
 - Fix: [#17959] Areas marked for dirty drawing are too large.
 - Fix: [#17963] Some marketing campaigns can’t be started after Finances window tab has been on Research.
 - Fix: [#17966] Reversed steel trains do not properly import from S4.
